# league-curriculum

./: .buildinfo  .buildinfo.bak  .gitignore  404.html  CNAME  Makefile  README.md  course.yml  docs.html  genindex.html  index.html  main.py  objects.inv  pyproject.toml  search.html  searchindex.js
.course/: spec.md  state.json
.course/research/: 001-existing-course-inventory.md
_old/: .gitignore
_sources/: index.md.txt
_sources/howto/: checkin_restart.md.txt  registration.md.txt  test_site_network.md.txt
_static/css/: custom.css
assets/css/: 0.styles.1bba8491.css
assets/js/: 1.221ccc94.js  10.d5c07b02.js  11.4b89c884.js  11.b1ac7bd1.js  11.ee528620.js  12.df57518d.js  13.1a43b501.js  14.bb0d76f4.js  17.1d2d8fa8.js  2.0c9070e1.js  22.d6bdcc88.js  23.e3120887.js  24.492599ba.js  24.76d4c3f7.js  25.62133ae8.js  25.99d94219.js  25.a23d7118.js  26.36e04e89.js  26.a23da793.js  26.cc7f227a.js  27.47ed1852.js  27.49729850.js  27.acd01a7b.js  27.fa2044c7.js  28.076a8115.js  28.78abde0e.js  28.d1e53bd2.js  28.e1ec1134.js  29.2cec9b48.js  (+24 more)
content/: _index.md
guide/: index.html  using-vue.html
howto/: account_registration.html  checkin_restart.html  devcontainer.html  index.html  java_levels.html  lessonbuilder_qs.html  module_repos.html  other_resources.html  python_codespaces.html  registration.html  test_site_network.html
java/: devcontainer.html  index.html  java_levels.html  module_repos.html  other_resources.html
lb/: how_it_works.html  quickstart.html  sources.html
scripts/: leaguec
site/: hugo.toml
source/: conf.py  index.md
static/: CNAME
(+22 files in other folders)
