[project]
name = "league-curriculum"
version = "0.1.0"
description = "DOcumentation website for League curriculum"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "furo>=2025.7.19",
    "ghp-import>=2.1.0",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-design>=0.6.1",
    "sphinx-togglebutton>=0.3.2",
]
